# agentic-rag-stack

./: .env.example  .gitignore  Enterprise_Intelligence_Hub_Project.docx  README.md  docker-compose.yml
apps/: README.md
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  ingest.py  log.py  main.py
apps/api/app/agents/: README.md  __init__.py
apps/api/app/evals/: README.md  __init__.py
apps/api/app/rag/: README.md  __init__.py  chunker.py  embedder.py  retriever.py  vector_store.py
apps/api/app/services/: __init__.py  classifier.py
apps/api/app/tools/: README.md  __init__.py
apps/api/tests/: README.md  __init__.py  conftest.py  test_classify.py  test_health.py  test_ingest.py  test_retrieve.py
apps/api/tests/test_rag/: conftest.py  test_chunker.py  test_embedder.py  test_retriever.py  test_vector_store.py
apps/web/: .env.example  .gitignore  README.md  pnpm-workspace.yaml
apps/web/app/: page.tsx
apps/web/components/: classify-playground.tsx  health-status.tsx
apps/web/lib/: api.ts
docs/: README.md  ROADMAP.md  runbook.md
docs/adr/: 0001-monorepo-structure.md  0002-vector-db-choice.md  0003-vector-db-choice-qdrant.md  0004-embedding-model-choice.md  README.md  TEMPLATE.md
docs/superpowers/plans/: 2026-05-27-dense-retriever-plan.md  2026-05-27-ingest-cli-plan.md  2026-05-27-retrieve-endpoint-plan.md  2026-05-27-vector-store-plan.md  2026-05-28-eval-framework-plan.md
docs/superpowers/specs/: 2026-05-27-dense-retriever-design.md  2026-05-27-ingest-cli-design.md  2026-05-27-retrieve-endpoint-design.md  2026-05-27-vector-store-design.md  2026-05-28-eval-framework-design.md
